# KITTCV

./: .gitignore
CircleMarkerTracking/: CMakeLists.txt  Config.h.in
CircleMarkerTracking/headers/: CVTask.h  CircleMarkerDetection.h  Config.h  MainTask.h  Marker.h  Settings.h  TestCircleMarkerDetectionTask.h  TrackingTestTask.h
CircleMarkerTracking/resources/calibration/: default.xml  edge.xml  phone.xml
CircleMarkerTracking/src/: CVTask.cpp  CircleMarkerDetection.cpp  Main.cpp  MainTask.cpp  Marker.cpp  Profiling.h  RemoteControl.cpp  TestCircleMarkerDetectionTask.cpp  TrackingTestTask.cpp
RemoteControlWebClient/: RemoteControlWebClient.js
RemoteControlWebClient/app/: controller.js  index.html  style.css
StreamingTest/: CMakeLists.txt  Config.h.in
StreamingTest/headers/: Config.h  RemoteControl.h  Settings.h
StreamingTest/src/: RemoteControl.cpp  Settings.cpp  StreamingTest.cpp
